<resources>
    <string name="app_name">CustomTabBar</string>

    <string name="app_home_name">首页</string>

    <string name="app_search_name">搜索</string>

    <string name="app_cart_name">购物车</string>

    <string name="app_share_order">晒单</string>

    <string name="app_center_name">我</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
