<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="vertical">

    <!-- 普通底部导航 -->

    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <!--1 首页-->

        <RelativeLayout
            android:id="@+id/re_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="2dp">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ib_home"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_centerHorizontal="true"
                    android:background="#ffffff"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/tab_home" />

                <TextView
                    android:id="@+id/tv_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ib_home"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:text="@string/app_home_name"
                    android:textColor="#9A9A9A"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/unread_home"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/round_red"
                    android:gravity="center"
                    android:text="7"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    android:visibility="invisible" />
            </RelativeLayout>
        </RelativeLayout>


        <!--2-->

        <RelativeLayout
            android:id="@+id/re_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="2dp">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ib_search"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_centerHorizontal="true"
                    android:background="#ffffff"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/tab_search" />

                <TextView
                    android:id="@+id/tv_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ib_search"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:text="@string/app_search_name"
                    android:textColor="#9A9A9A"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/unread_search"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/round_red"
                    android:gravity="center"
                    android:text="7"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    android:visibility="invisible" />
            </RelativeLayout>
        </RelativeLayout>

        <!--3-->
        <RelativeLayout
            android:id="@+id/re_share_order"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="2dp">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ib_share_order"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_centerHorizontal="true"
                    android:background="#ffffff"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/tab_share_order" />

                <TextView
                    android:id="@+id/tv_share_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ib_share_order"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:text="@string/app_share_order"
                    android:textColor="#9A9A9A"
                    android:textSize="12sp" />


                <TextView
                    android:id="@+id/unread_share_order"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/round_red"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    android:visibility="invisible" />
            </RelativeLayout>
        </RelativeLayout>


        <!--4-->
        <RelativeLayout
            android:id="@+id/re_cart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="2dp">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ib_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_centerHorizontal="true"
                    android:background="#ffffff"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/tab_cart" />

                <TextView
                    android:id="@+id/tv_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ib_cart"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:text="@string/app_cart_name"
                    android:textColor="#9A9A9A"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/unread_cart"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/round_red"
                    android:gravity="center"
                    android:text="99"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    android:visibility="visible" />
            </RelativeLayout>
        </RelativeLayout>

        <!--5-->
        <RelativeLayout
            android:id="@+id/re_center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="2dp">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ib_center"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_centerHorizontal="true"
                    android:background="#ffffff"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/tab_center" />

                <TextView
                    android:id="@+id/tv_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ib_center"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:text="@string/app_center_name"
                    android:textColor="#9A9A9A"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/unread_center"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/round_red"
                    android:gravity="center"
                    android:text="4"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    android:visibility="visible" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
